[FIX] hr_appraisal: increase readability over demo text
closes odoo/enterprise#19437

Related: odoo/odoo#73210

--- a/hr_appraisal/static/src/scss/hr_appraisal.scss
+++ b/hr_appraisal/static/src/scss/hr_appraisal.scss
@@ -81,7 +81,10 @@
         }
     }
     .o_appraisal_blur {
-        filter: blur(0.6rem);
+        filter: blur(0.2rem);
+        line-height: 1;
+        margin-top: 2rem;
+        opacity: .3;
         user-select: none;
         pointer-events: none;
     }
